--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
                 >
                     <v-list-item 
                         v-for="api in apis"
+                        v-bind:key="api.id"
                     >
                         <v-list-item-content>
                             <v-list-item-title>
